# Novel_GRAND

./: .gitignore  .gitignore.example  PATCH_NOTES.md  README.md  pyproject.toml
configs/: fir_default.yaml  fir_legacy_probe.yaml  fir_smoke.yaml
env/: activate_fir.sh  requirements-fir.txt
novel_grand/: __init__.py  config.py
novel_grand.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
outputs/: _last_pipeline_run.json  slurm_tags_collect_34237835.out  slurm_tags_collect_34255457.out  slurm_tags_eval_34237837.err  slurm_tags_eval_34250123.err  slurm_tags_eval_34250123.out  slurm_tags_fit_34237836.out  slurm_tags_fit_34255458.out  slurm_tags_probe_34246071.out  slurm_tags_probe_34254723.out  slurm_tags_report_34250124.out  slurm_tags_report_34255460.out  slurm_tags_smoke_34246070.out  slurm_tags_smoke_34254400.out
probe_outputs/: bootstrap_fir_env.txt  compute_probe.txt  login_probe.txt  pip_show_fir.txt  slurm_probe_34099452.err  venv_fir_freeze.txt  venv_verify_34102300.err  venv_verify_34207812.out  venv_verify_compute_34102300.txt  venv_verify_compute_34207812.txt  venv_verify_login.txt
slurm/: 00_smoke_tags_grand.sbatch  05_probe_legacy_tags_grand.sbatch  10_collect_train_tags_grand.sbatch  20_train_tags_grand.sbatch  30_eval_tags_grand.sbatch  40_report_tags_grand.sbatch  probe_fir_env.sbatch  submit_legacy_probe.sh  submit_tags_grand_pipeline.sh  verify_fir_venv.sbatch
tools/: bootstrap_fir_env.sh  check_pipeline_status.sh  check_tags_package.sh  clean_tags_repo.sh  ensure_gitignore_patterns.sh  fir_env_probe.sh  verify_sionna_env.py
(+2148 files in other folders)
