[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-grand"
version = "0.1.2"
description = "Sionna-based 5G NR LDPC + MaskDiff-GRAND research pipeline"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["novel_grand*"]
